MSSQL-test.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: mydb
  name: mydb
spec:
  containers:
  - image: mcr.microsoft.com/mssql/server
    name: mydb
    ports:
    - containerPort: 1433
      name: mydb
---
apiVersion: v1
kind: Service
metadata:
   name: mydb
spec:
  type: NodePort
  ports:
  - port: 1433 
    targetPort: 80
    nodePort: 31433
  selector:
    run: mydb
