plantr-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service-label-key: plantr-angular
  name: plantr-angular
spec:
  type: ClusterIP
  ports:
  - name: plantr-angular
    port: 80
    protocol: TCP
  selector:
    deployment-label-key: plantr-angular
